--- a/src/component/coupon/index.less
+++ b/src/component/coupon/index.less
@@ -214,8 +214,19 @@
           line-height: 80px;
           font-weight: bold;
           position: relative;
+          width: 80%;
+          margin-right: 20px;
+          text-align: center;
         }
-
+        &-priceAuto {
+          font-size: auto;
+          line-height: 80px;
+          font-weight: bold;
+          position: relative;
+          width: 80%;
+          margin-right: 20px;
+          text-align: center;
+        }
         &-sign {
           font-size: 24px;
           line-height: 24px;
