--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -196,6 +196,7 @@
     line-clamp: 1;
     -webkit-line-clamp: 1;
     -webkit-box-orient: vertical;
+    margin-top: 10px;
   }
   &-tips-h5 {
     display: -webkit-box !important;
