--- a/src/pages/product/index.less
+++ b/src/pages/product/index.less
@@ -80,7 +80,7 @@
     border-radius: 50%;
     .bg;
     background-image: url(//net.huanmusic.com/scanbar-c/v1/icon_search_cart1.png);
-    background-size: 100% 100%;
+    background-size: 100%;
 
     &-bge {
       position: absolute;
