--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -128,15 +128,20 @@ page {
     }
   }
 
-  &-code {
+  &-code-wrap {
     position: absolute;
     right: 40px;
-    top: 70px;
-    width: 32px;
-    height: 32px;
-    z-index: 99;
-    .bg;
-    background-image: url(//net.huanmusic.com/scanbar-c/v2/icon_mine_code.png);
+    top: 45px;
+    width: 100px;
+    height: 100px;
+    &-code {
+      width: 32px;
+      height: 32px;
+      z-index: 99;
+      margin: 40px;
+      .bg;
+      background-image: url(//net.huanmusic.com/scanbar-c/v2/icon_mine_code.png);
+    }
   }
 
   &-member {
