--- a/src/pages/product/component/index.less
+++ b/src/pages/product/component/index.less
@@ -224,12 +224,12 @@
     }
     &-rightPrice {
       float: right;
-      margin: 10px 0px;
+      margin: 20px 0px;
       margin-right: 10px;
     }
     &-rightPrice-pay {
-      float: right;
-      margin: 35px 0px;
+      float: left;
+      margin: 20px 0px;
       margin-right: 10px;
     }
     &-right {
