--- a/src/component/address/index.less
+++ b/src/component/address/index.less
@@ -39,6 +39,9 @@
     .padding(30px);
     .flex(flex-start, center, column);
     &-title {
+      &-big {
+        font-size:38px !important;
+      }
       font-size:30px;
       font-weight:500;
       color:rgba(51,51,51,1);
