--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -277,10 +277,15 @@
     }
     &-gray {
       font-size: 24px;
+      top: -10px;
+      position: relative;
     }
     &-discount {
       font-size: 24px;
       color: #666666;
+      top: -10px;
+      position: relative;
+
       // margin-top: 10px;
     }
 
