--- a/src/pages/style/order.less
+++ b/src/pages/style/order.less
@@ -191,7 +191,7 @@
   &-modal-h5 {
     display: flex;
     background-color: #f6f6f6;
-    height: 100vh;
+    height: 80vh;
     border-top: 1px solid #f9f9f9;
     &-layout{
       .at-float-layout__container {
@@ -226,6 +226,7 @@
 
     &-menu {
       width: 40% !important;
+      height: 100%;
     }
   }
   &-modal {
