--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -287,12 +287,12 @@
       .bg;
     }
     &-normal {
-      background-image: url('../../assets/bt_unavailable.png');
+      background-image: url('//net.huanmusic.com/weapp//bt_unavailable.png');
       background-size: 100% 100%;
       background-repeat: no-repeat;
     }
     &-active {
-      background-image: url('../../assets/bt_selected.png');
+      background-image: url('//net.huanmusic.com/weapp//bt_selected.png');
       background-size: 100% 100%;
       background-repeat: no-repeat;
     }
