--- a/src/styles/reset.less
+++ b/src/styles/reset.less
@@ -94,7 +94,13 @@
    max-width: 60rpx !important;
    width: 60rpx !important; 
  }
- 
+ .container-Loading{
+  position: absolute;
+  top: 20%;
+  left: 30%;
+  width: 200px;
+  height: 200px;
+}
  .at-badge__num {
    right: 0PX !important;
    border-radius: 14px !important;
@@ -104,7 +110,11 @@
    right: 12PX !important;
    top: 2PX !important;
  }
- 
+ .at-action-sheet__header {
+  font-size: 34px !important;
+  padding: 24px !important;
+  color: #333333 !important;
+}
  
  .layout-body {
    padding: 0px !important;
