--- a/src/pages/order/component/index.less
+++ b/src/pages/order/component/index.less
@@ -6,7 +6,153 @@
 
   &-address {
     .padding(30px, t);
-
+    &-h5wx {
+      .at-action-sheet__container {
+        .at-action-sheet__header {
+          font-size: 34px;
+          padding: 24px;
+          color: #333333;
+        }
+      }
+      &-close {
+        width: 26px;
+        height: 26px;
+        position: absolute;
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        top: 10px;
+        left: 15px;
+        margin: 30px;
+        z-index: 999;
+      }
+      &-pay {
+        height: 100px;
+        line-height: 100px;
+        border-bottom: 1px solid #cccccc;
+        display: -webkit-box;
+        position: relative;
+        font-size: 30px;
+        &-border {
+          border-bottom: none;
+        }
+        &-image {
+          background-size: 100% 100%;
+          background-repeat: no-repeat;
+          width: 60px;
+          height: 60px;
+          margin: 20px 30px;
+        }
+        &-select {
+          width: 60px;
+          position: relative;
+          // .padding(30px, r);
+          &-item {
+            position: absolute;
+            margin-top: 50px;
+            right: 30px;
+            transform: translateY(-50%);
+            width:34px;
+            height:34px;
+            .bg;
+          }
+          &-normal {
+            background-image: url('//net.huanmusic.com/weapp//bt_unavailable.png');
+            background-size: 100% 100%;
+            background-repeat: no-repeat;
+          }
+          &-active {
+            background-image: url('//net.huanmusic.com/weapp//bt_selected.png');
+            background-size: 100% 100%;
+            background-repeat: no-repeat;
+          }
+        }
+      }
+      &-button {
+        width: 90%;
+        height: 80px;
+        font-size: 32px;
+        line-height: 80px;
+        background: #2a86fc;
+        border-radius: 40px;
+        margin: auto;
+        color: #fff;
+        margin-top: 100px;
+      }
+    }
+    &-wx {
+      .at-action-sheet__container {
+        .at-action-sheet__header {
+          font-size: 44px !important;
+          padding: 24px !important;
+          color: #333333 !important;
+        }
+      }
+      &-close {
+        width: 26px;
+        height: 26px;
+        position: absolute;
+        background-size: 100% 100%;
+        background-repeat: no-repeat;
+        top: 10px;
+        left: 15px;
+        margin: 30px;
+        z-index: 999;
+      }
+      &-pay {
+        height: 100px;
+        line-height: 100px;
+        border-bottom: 1px solid #e3e3e3;
+        display: -webkit-box;
+        position: relative;
+        font-size: 30px;
+        &-border {
+          border-bottom: none;
+        }
+        &-image {
+          background-size: 100% 100%;
+          background-repeat: no-repeat;
+          width: 60px;
+          height: 60px;
+          margin: 20px 30px;
+        }
+        &-select {
+          width: 60px;
+          position: relative;
+          // .padding(30px, r);
+          &-item {
+            position: absolute;
+            margin-top: 50px;
+            right: 30px;
+            transform: translateY(-50%);
+            width:34px;
+            height:34px;
+            .bg;
+          }
+          &-normal {
+            background-image: url('//net.huanmusic.com/weapp//bt_unavailable.png');
+            background-size: 100% 100%;
+            background-repeat: no-repeat;
+          }
+          &-active {
+            background-image: url('//net.huanmusic.com/weapp//bt_selected.png');
+            background-size: 100% 100%;
+            background-repeat: no-repeat;
+          }
+        }
+      }
+      &-button {
+        width: 90%;
+        height: 80px;
+        font-size: 32px;
+        line-height: 80px;
+        background: #2a86fc;
+        border-radius: 40px;
+        margin: auto;
+        color: #fff;
+        margin-top: 100px;
+        margin-bottom: 40px;
+      }
+    }
     &-pad {
       position: relative;
       z-index: 100;
@@ -118,7 +264,9 @@
           font-size: 30px;
           font-weight: 500;
           color: rgba(51, 51, 51, 1);
-
+          &-txt {
+            .margin(13px + 16px, r);
+          }
           &-right {
             .margin(13px + 16px, r);
           }
