* 修复bug 加入新模式

--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -47,6 +47,7 @@
 
   &-border {
     border-bottom: 1px solid @product-border-color;
+    .padding(30px, lr);
   }
 
   &-last {
@@ -346,7 +347,7 @@
     &-touch {
       width: 80px;
       height: 80px;
-      .flex(center, center);
+      .flex(center, flex-end);
     }
 
     &-button {
