--- a/src/component/cart/cart.less
+++ b/src/component/cart/cart.less
@@ -36,8 +36,7 @@
     color: #ffffff;
     font-size: @cart-button-font;
     &-disabled {
-      background: rgba(204, 204, 204, 1);
-      color: #666666;
+      background: #cccccc;
     }
     &-active {
       // .background-image("//net.huanmusic.com/weapp/bt_bottom_close_pitch.png");
@@ -103,7 +102,7 @@
         z-index: 100;
       }
       &-disabled {
-        color: #8b8b8b;
+        color: #b3b3b3;
       }
     }
     &-suspension {
