--- a/src/component/tabs/tabs.choose.less
+++ b/src/component/tabs/tabs.choose.less
@@ -10,7 +10,7 @@
     height: 56px;
     .flex(center, center);
     border-radius: 10px;
-    background-color: #F5F5F5;
+    background-color: #f5f5f5;
     color: #999999;
     font-size: 26px;
     line-height: 26px;
@@ -18,8 +18,8 @@
   }
 
   .item-current {
-    background-color: #E1EEFF;
-    color: #2A86FC;
+    background-color: #e1eeff;
+    color: #2a86fc;
   }
 
   &-pos {
@@ -52,6 +52,7 @@
         display: flex;
         flex-direction: row;
         flex: 1;
+        width: 160px * 3;
         overflow-x: auto;
       }
 
@@ -88,7 +89,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    border-top: rgba(227, 227, 227, .7) solid 1px;
+    border-top: rgba(227, 227, 227, 0.7) solid 1px;
 
     &-item {
       .margin(20px, t);
