--- a/src/pages/style/product.less
+++ b/src/pages/style/product.less
@@ -10,7 +10,7 @@
 @product-list-left-bg-color: #f6f6f6;
 @product-list-type-height: 100px;
 @product-list-type-header-font: 28px;
-@product-section-color: #F8F8FA;
+@product-section-color: #f8f8fa;
 @product-select-title-font: 32px;
 @product-pay-footer-right: 410px;
 
@@ -45,7 +45,7 @@
       position: absolute;
       right: 10px;
       border-radius: 50%;
-      background-color: #FC4E44;
+      background-color: #fc4e44;
       font-size: 22px;
       .flex(center, center);
       height: 37px;
@@ -55,7 +55,7 @@
     }
 
     &-search {
-      width: @product-search-width  !important;
+      width: @product-search-width !important;
     }
 
     &-item {
@@ -128,7 +128,6 @@
         height: 100%;
         display: flex;
         flex-direction: row;
-        border-top: rgba(193, 192, 201, .3) solid 1px;
         overflow: scroll;
       }
     }
@@ -515,8 +514,8 @@
       .padding(@cart-height + 50px, b);
     }
 
-    &-pos {      
-      margin: auto;  
+    &-pos {
+      margin: auto;
       .margin(6px, t);
       width: 90% !important;
       background-color: #f2f2f2;
@@ -541,7 +540,7 @@
         .padding(@product-pay-footer-right, r);
         width: 750px;
         height: @cart-height;
-        .background-image('//net.huanmusic.com/weapp/bmg_bottom_close.png');
+        .background-image("//net.huanmusic.com/weapp/bmg_bottom_close.png");
       }
 
       &-right {
@@ -556,11 +555,15 @@
         font-size: @cart-button-font;
 
         &-disabled {
-          .background-image('//net.huanmusic.com/weapp/bt_put_bottom_close_und.png');
+          .background-image(
+            "//net.huanmusic.com/weapp/bt_put_bottom_close_und.png"
+          );
         }
 
         &-active {
-          .background-image('//net.huanmusic.com/weapp/bt_put_bottom_close_pitch.png');
+          .background-image(
+            "//net.huanmusic.com/weapp/bt_put_bottom_close_pitch.png"
+          );
         }
       }
 
@@ -598,7 +601,7 @@
       &-input {
         .padding(30px);
         .flex(center, space-between, row);
-        background-color: #F8F8FA;
+        background-color: #f8f8fa;
         border-radius: 20px;
 
         &-icon {
@@ -633,7 +636,7 @@
           right: 0;
           bottom: 0;
           z-index: 1000;
-          background-color: rgba(0, 0, 0, 0.7)
+          background-color: rgba(0, 0, 0, 0.7);
         }
 
         &-box {
@@ -691,7 +694,7 @@
       width: 100%;
       height: 92px;
       .flex(center, space-between, row);
-      border-bottom: #E3E3E3 1px solid;
+      border-bottom: #e3e3e3 1px solid;
       padding: 0 32px;
 
       &-item {
@@ -704,7 +707,7 @@
       }
 
       &-green {
-        color: #2CA43A;
+        color: #2ca43a;
         font-size: 26px;
       }
 
@@ -749,11 +752,11 @@
       border-radius: 14px;
 
       &-member {
-        background-color: #CCAE80;
+        background-color: #ccae80;
       }
 
       &-refund {
-        background-color: #20BBB9;
+        background-color: #20bbb9;
       }
     }
 
@@ -762,7 +765,7 @@
     }
 
     &-border {
-      border-bottom: 1PX solid #e3e3e3;
+      border-bottom: 1px solid #e3e3e3;
     }
 
     &-normal {
@@ -838,7 +841,7 @@
       }
 
       &-margin {
-        .margin(26px, l)
+        .margin(26px, l);
       }
     }
 
@@ -864,13 +867,13 @@
       }
 
       &-full {
-        background-color: #FFEBEB;
-        color: #FC4E44;
+        background-color: #ffebeb;
+        color: #fc4e44;
       }
 
       &-first {
-        background-color: #FFF0E2;
-        color: #FF893B;
+        background-color: #fff0e2;
+        color: #ff893b;
       }
     }
 
@@ -899,7 +902,7 @@
           padding: 6px 19px;
           color: #fff;
           font-size: 26px;
-          background-color: #FC4E44;
+          background-color: #fc4e44;
           border-radius: 10px;
         }
       }
@@ -908,11 +911,11 @@
         .flex(center, space-between, row);
         .padding(30px, lr);
         .padding(35px, tb);
-        border-top: #E3E3E3 1px solid;
+        border-top: #e3e3e3 1px solid;
       }
 
       &-price {
-        color: #FC4E44;
+        color: #fc4e44;
         font-size: 30px;
 
         &-black {
@@ -921,7 +924,7 @@
       }
 
       &-grey {
-        color: #CCCCCC;
+        color: #cccccc;
         font-size: 30px;
       }
 
@@ -976,7 +979,7 @@
         }
 
         &-red {
-          color: #FC4E44 !important;
+          color: #fc4e44 !important;
         }
 
         &-base {
