--- a/src/component/product/product.less
+++ b/src/component/product/product.less
@@ -88,6 +88,26 @@
       border: 1px solid @product-border-color;
       overflow: hidden;
 
+      &-new {
+        position: absolute;
+        top: 0;
+        left: 0;
+        .bg;
+        width: 28px;
+        height: 28px;
+        background-image: url("//net.huanmusic.com/scanbar-c/icon_newshop.png");
+      }
+      &-close {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        left: 0;
+        .bg;
+        width: 100%;
+        height: 42px;
+        background-image: url("//net.huanmusic.com/scanbar-c/icon_dayang_m.png");
+      }
+
       &-image {
         width: 100%;
         height: 100%;
