--- a/src/component/empty/index.less
+++ b/src/component/empty/index.less
@@ -6,7 +6,7 @@
   &-layout {
     width: 100%;
     .flex(center, center, column);
-    .margin(200px, t)
+    .margin(200px, t);
   }
   &-img {
     width: 750px;
@@ -25,18 +25,18 @@
     height: 50px;
     right: 0;
     .flex(center, center);
-    font-size:30px;
-    font-weight:500;
-    color:rgba(153,153,153,1);
+    font-size: 30px;
+    font-weight: 500;
+    color: rgba(153, 153, 153, 1);
   }
   &-button {
-    width:240px;
-    height:80px;
-    background:rgba(42,134,252,1);
-    border-radius:40px;
+    width: 240px;
+    height: 80px;
+    background: rgba(42, 134, 252, 1);
+    border-radius: 40px;
     .flex(center, center);
-    font-size:32px;
-    font-weight:500;
-    color:rgba(255,255,255,1);
+    font-size: 32px;
+    font-weight: 500;
+    color: rgba(255, 255, 255, 1);
   }
 }
