--- a/src/pages/user/index.less
+++ b/src/pages/user/index.less
@@ -129,7 +129,7 @@ page {
         bottom: 0;
         left: 0;
         right: 0;
-        width: 690px;
+        width: 100%;
         height: 2px;
         background-color: rgba(227, 227, 227, 1);
       }
@@ -352,6 +352,9 @@ page {
       color: rgba(216, 174, 109, 1);
     }
     &-user-phone {
+      .margin(16px, t);
+      .margin(40px, b);
+      line-height: 30px;
       font-size: 30px;
       color: rgba(102, 102, 102, 1);
     }
