--- a/src/pages/product/component/index.less
+++ b/src/pages/product/component/index.less
@@ -215,4 +215,15 @@
       }
     }
   }
+
+  &-share {
+    position: absolute;
+    top: 40px;
+    right: 0px;
+    width: 190px;
+    height: 54px;
+    background-color: transparent;
+    .bg;
+    background-image: url(//net.huanmusic.com/scanbar-c/v1/icon_details_share.png);
+  }
 }
